# zenoh_autoware_v2x

./: .gitignore  .pre-commit-config.yaml  README.md  map_info.json  pyproject.toml  requirements.txt
autoware_v2x/src/v2x_light/: package.xml  setup.cfg  setup.py
autoware_v2x/src/v2x_light/v2x_light/: test.py  v2x_light.py
intersection_manager/: main.py
map/: lanelet2_map.osm
traffic_manager/: main.py
v2x_light/: main.py
