[tool.poetry]
name = "v2x-agent"
version = "0.1.0"
description = ""
authors = ["RogerJung <engineer54rj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.1.2"
carla = "0.9.16"
numpy = "^1.26"
eclipse-zenoh = "1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff
[tool.ruff]
line-length = 150
## Ignore some files
exclude = [
    # This is ROS generated test file
    "autoware_v2x/src/v2x_light/test/*",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"
