[project]
name = "v2x-agent"
version = "0.1.0"
description = ""
authors = [{ name = "RogerJung", email = "engineer54rj@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "pygame>=2.1.2,<3",
    "carla==0.9.16",
    "numpy>=1.26,<2",
    "eclipse-zenoh==1.8.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
]

# Ruff
[tool.ruff]
line-length = 150
## Ignore some files
exclude = [
    # This is ROS generated test file
    "autoware_v2x/src/v2x_light/test/*",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"
