[project]
name = "v2x-agent"
version = "0.1.0"
description = ""
authors = [{ name = "RogerJung", email = "engineer54rj@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "pygame>=2.1.2,<3",
    "carla==0.9.16",
    "numpy>=1.26,<2",
    "eclipse-zenoh==1.8.0",
    "zenoh-ros-type @ git+https://github.com/evshary/zenoh-ros-type-python.git@main",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
]

# Ruff
[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"
